@@ -1,5 +1,7 @@
 Contract Configurator 1.27.0
 - Added Expansion requirement.
+- Added OtherKerbinBiomes() function to return biomes like Baikerbanur biomes.
+- Fixed Biome functions to correctly distinguish between KSC biomes and other collider based biomes.
 
 Contract Configurator 1.26.0
 - Recompile for KSP 1.5.1
